pom error